--- a/app/src/main/res/layout/activity_line_chart.xml
+++ b/app/src/main/res/layout/activity_line_chart.xml
@@ -1,25 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:shrinkColumns="0"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     tools:context=".LineChartActivity">
-
-
-
     <Button
         android:id="@id/btn"
-        android:text="選擇日期"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
+        android:text="選擇日期" />
+
+    <Button
+        android:id="@+id/btn_re"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/btn"
+        android:text="更新資料" />
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/chart_line"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn" />
+       android:layout_below="@+id/btn"/>
 
-</LinearLayout>
+</RelativeLayout>
