--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,12 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="100dp"
             android:text="LINE CHART" />
-
+        <Button
+            android:id="@+id/btn_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="100dp"
+            android:text="BAR CHART" />
 
 
 
